deploy/k8s/loadgen.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadgen
  namespace: spring
  labels:
    app: loadgen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loadgen
  template:
    metadata:
      labels:
        app: loadgen
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - loadgen
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: curl
          image: registry.cn-beijing.aliyuncs.com/obser/curl:7.83.1
          imagePullPolicy: IfNotPresent
          command:
            - /bin/sh
            - -exc
            - |
              while true
              do
              curl -i foo-svc:8080  # request directly
              sleep 1  # request interval
              done
      imagePullSecrets:
        - name: ali
