deploy/k8s/all-in-one.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: spring

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
    release: redis
  name: redis-master
  namespace: spring
spec:
  type: ClusterIP
  selector:
    app: redis
    release: redis
    role: master
  ports:
    - name: redis
      port: 6379
      protocol: TCP
      targetPort: redis

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: redis
    chart: redis-3.0.2
    release: redis
  name: redis-master
  namespace: spring
spec:
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: redis
      release: redis
      role: master
  serviceName: redis-master
  template:
    metadata:
      labels:
        app: redis
        release: redis
        role: master
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - loo-svc
                        - foo-svc
                        - bar-svc
                        - redis
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: redis-master
          image: registry.cn-beijing.aliyuncs.com/obser/redis:4.0.9
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
            failureThreshold: 5
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          ports:
            - containerPort: 6379
              name: redis
              protocol: TCP
          readinessProbe:
            exec:
              command:
                - redis-cli
                - ping
            failureThreshold: 5
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /bitnami/redis/data
              name: redis-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext:
        fsGroup: 1001
        # runAsUser: 1001
        runAsUser: 0
      terminationGracePeriodSeconds: 30
      volumes:
        - emptyDir: { }
          name: redis-data
      imagePullSecrets:
        - name: ali
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate

---
apiVersion: v1
kind: Service
metadata:
  namespace: spring
  name: foo-svc
  labels:
    app: foo-svc
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: foo-svc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo-svc
  namespace: spring
spec:
  selector:
    matchLabels:
      app: foo-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: foo-svc
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - loo-svc
                        - foo-svc
                        - bar-svc
                        - redis
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: foo-svc
          image: registry.cn-beijing.aliyuncs.com/obser/foo-svc:0.2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
      imagePullSecrets:
        - name: ali

---
apiVersion: v1
kind: Service
metadata:
  namespace: spring
  name: bar-svc
  labels:
    app: bar-svc
spec:
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: bar-svc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar-svc
  namespace: spring
spec:
  selector:
    matchLabels:
      app: bar-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: bar-svc
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - loo-svc
                        - foo-svc
                        - bar-svc
                        - redis
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: bar-svc
          image: registry.cn-beijing.aliyuncs.com/obser/bar-svc:0.2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
      imagePullSecrets:
        - name: ali

---
apiVersion: v1
kind: Service
metadata:
  namespace: spring
  name: loo-svc
  labels:
    app: loo-svc
spec:
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: loo-svc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loo-svc
  namespace: spring
spec:
  selector:
    matchLabels:
      app: loo-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: loo-svc
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - loo-svc
                        - foo-svc
                        - bar-svc
                        - redis
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: loo-svc
          image: registry.cn-beijing.aliyuncs.com/obser/loo-svc:0.2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
      imagePullSecrets:
        - name: ali
