deploy/k8s/ingress.yaml
########################
# Nginx Ingress
########################
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: spring
  name: foo-svc-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ingress-test.<hostname>
    http:
      paths:
      - path: /spring/
        backend:
          serviceName: foo-svc
          servicePort: http
---
########################
# istio gateway
########################
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  namespace: spring
  name: spring-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "istio-test.<hostname>"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: spring
  name: foo-svc-vs
spec:
  hosts:
  - "istio-test.<hostname>"
  - "foo-svc.spring.svc.cluster.local"
  gateways:
  - spring-gateway
  - mesh
  http:
  - match:
    - uri:
        prefix: /spring/
    route:
    - destination:
        host: foo-svc
    rewrite:
      uri: /
